# PythonPoetryScriptExample

./: pyproject.toml  readme.md  swagger.html  swagger.json
test_cli_app/: awesome_cli_app.py
